--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+
 :root {
     --lightBeige: rgb(250, 223, 181, .8);
   }
@@ -5,4 +7,11 @@
 * {
     padding: 0;
     margin: 0;
+    font-family: 'Nunito', sans-serif;
 }
+
+
+
+
+
+
