--- a/src/Components/Components_CSS/Recipes.css
+++ b/src/Components/Components_CSS/Recipes.css
@@ -3,49 +3,25 @@
     padding: 0;
 }
 
-
-#recipes {
-    min-height: 100vh;
-    width: 100vw;
-    position: absolute;
-    top: 0;
-    /* background: rgb(250, 245, 240); */
-}
-
-#recipes h1 {
-    font-size: 32px;
-    margin-left: 4rem;
-    margin-right: 2rem;
-}
-
-
-.heading {
-    margin: 5rem 0 3.5rem 0;
-    display: flex;
-}
-
 .recipesList {
-    margin: 2rem 4rem 4rem 4rem;
-}
-
-.recipesList {
-    display: flex;
+    margin: 2rem 0 1rem 4rem;
+    display: inline-flex;
+    background-color: green;
 }
 
 .recipeCard {
     width: 350px;
-    margin: 0 2rem 3rem 0;
     background-color: white;
     border-radius: 3px;
     box-shadow: 0 0 5px #333;
 }
 
-.recipeCard h2 {
+.recipeCard h1 {
     font-size: 22px;
     padding: .7rem;
 }
 
-.recipeCard h3 {
+.recipeCard h2 {
     padding: .7rem .7rem 0 .7rem;
     line-height: 1.5;
     font-size: 22px;
