--- a/src/Components/Components_CSS/Form.css
+++ b/src/Components/Components_CSS/Form.css
@@ -1,7 +1,18 @@
 form {
-    margin-top: 100px;
-    display: flex;
-    flex-direction: column;
-    padding: 1rem;
-    margin-bottom: 5rem;
-  }
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  margin-bottom: 5rem;
+}
+
+form .ingredientList,
+form .instructionList {
+  padding: 1rem 0 1rem 0;
+}
+
+form #showIngredients p,
+form #showInstructions p {
+  color: rgb(92, 92, 92);
+  font-size: 16px;
+}
