--- a/src/Components/Components_CSS/Home.css
+++ b/src/Components/Components_CSS/Home.css
@@ -1,25 +1,32 @@
-
-
 #home {
     height: 100vh;
-    width: 100vw;
     display: flex;
     align-items: center;
     justify-content: center;
     top: 0;
     background: url("https://source.unsplash.com/kXQ3J7_2fpc/1600x900") center
     center/cover no-repeat fixed;
-    /* font-family: 'Nunito', sans-serif; font-weight: 700; */
+    background-size: 100%;
+    transition: background-size 5s ease-in-out;
 }
 
-#home h1 {
+#home:hover {
+    background-size: 105%;
+}
+
+#home .container {
     border-style: solid;
     border-width: 5px;
     border-color: var(--lightBeige);
     background-color: rgba(253, 248, 239, 0.9);
-    padding: 10vh;
+    padding: 10vh 16vh 10vh 16vh;
     border-radius: 3px;
-    font-size: 62px;
-    font-weight: 400;
-    text-align: center; 
+    text-align: center;
+}
+
+#home h1 {
+    font-size: 72px;
+    font-weight: 700;
+    text-align: center;
+    padding-bottom: 1rem; 
 }
