recipe form styled with Bootstrap

--- a/src/Components/Components_CSS/Form.css
+++ b/src/Components/Components_CSS/Form.css
@@ -1,14 +1,35 @@
+.formContainer {
+  display: flex;
+  justify-content: center;
+}
+
 form {
   margin-top: 100px;
-  display: flex;
-  flex-direction: column;
-  padding: 1rem;
+  width: 40%;
   margin-bottom: 5rem;
+}
+
+.form-control:focus {
+  border-color: grey;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 5px #333;
+}
+
+
+form h1 {
+  padding: 0 0 2rem 0;
+}
+
+.ingredientSection, .instructionSection {
+  padding: 1rem 0 1rem 0;
+}
+
+.ingredientSection label.form-label, .instructionSection label.form-label {
+  padding: .5rem 0 .5rem 0;
 }
 
 form .ingredientList,
 form .instructionList {
-  padding: 1rem 0 1rem 0;
+  padding: 1rem 0 0 0;
 }
 
 form #showIngredients p,
@@ -16,3 +37,27 @@ form #showInstructions p {
   color: rgb(92, 92, 92);
   font-size: 16px;
 }
+
+.btn-outline-primary {
+  color: darkgreen;
+  border-color: darkgreen;
+  border-width: 2px;
+  display: block;
+}
+
+.btn-outline-primary:hover {
+  background-color: darkgreen;
+  border-color: darkgreen;
+}
+
+.btn-primary {
+  background-color: darkgreen;
+  border-color: darkgreen;
+  margin-top: 3.5rem;
+}
+
+.btn-primary:hover {
+  background-color: rgb(1, 73, 1);
+}
+
+
