--- a/src/Components/Components_CSS/searchArea.css
+++ b/src/Components/Components_CSS/searchArea.css
@@ -1,10 +1,24 @@
 .searchBox {
+    width: fit-content;
+    height: 5rem;
     margin: 5rem 0 2rem 4rem;
-    display: flex;
+    display: inline-flex;
+    align-items: center;
 }
 
 .searchBox h1 {
     font-size: 32px;
     margin-right: 2rem;
 }
+
+.searchBox form.form-inline {
+    margin-right: 2rem;
+    padding: 0;
+}
+
+.searchBox a:hover {
+    text-decoration: none;
+}
+
+
 
