--- a/src/Components/Components_CSS/Footer.css
+++ b/src/Components/Components_CSS/Footer.css
@@ -1,5 +1,6 @@
 footer {
     width: 100%;
+    height: 7vh;
     background-color: var(--lightBeige);
     text-align: center;
     padding: 1rem 0 1rem 0;
